# uc-intg-weather

./: .gitignore  Dockerfile  Docketfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_weather/: __init__.py  __main__.py  client.py  config.py  driver.py  weather_entity.py
