[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-weather"
description = "Weather Display integration for Unfolded Circle Remote"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
keywords = [
    "unfoldedcircle",
    "integration",
    "weather",
    "open-meteo",
    "media-player"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "ucapi>=0.4.0",
    "aiohttp>=3.8.0",
    "certifi",
    "aiofiles"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-weather"
"Bug Reports" = "https://github.com/mase1981/uc-intg-weather/issues"

[tool.setuptools]
packages = ["uc_intg_weather"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_weather.__version__"}

[tool.setuptools.package-data]
"uc_intg_weather" = ["*.json", "icons/*.png"]

[project.scripts]
uc-intg-weather = "uc_intg_weather.driver:main"